--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "css-loader": "^0.28.9",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
     "js-md5": "^0.7.3",
     "less": "^3.0.1",
     "less-loader": "^4.0.6",
@@ -21,7 +22,8 @@
     "photoswipe": "^4.1.2",
     "store": "^2.0.12",
     "style-loader": "^0.18.2",
-    "vue": "^2.5.13", 
+    "url-search-params-polyfill": "^4.0.1",
+    "vue": "^2.5.13",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^14.1.1",
     "vue-router": "^3.0.1",
